fix: update metallic logo and allow all origins in backend CORS config